crates/client-presentation/src/render/snapshots/client_presentation__render__markdown__tests__snapshot_heading.snap
---
source: crates/tui/src/render/markdown.rs
expression: "render(\"# Title\\n\\n## Sub\", &theme())"
---
- spans:
    - text: Title
      style:
        fg: Default
        bg: Default
        bold: true
        italic: true
        underline: true
      kind: Text
- spans: []
- spans:
    - text: Sub
      style:
        fg: Default
        bg: Default
        bold: true
        italic: false
        underline: false
      kind: Text
